# Akari_ros2_humble

./: .gitignore  README.md  README_EN.md  pysen.toml
akari_client_example/: setup.cfg  setup.py
akari_client_example/akari_client_example/: display_color.py  display_image.py  display_reset.py  display_text.py  joint_state_subscriber.py  m5_subscriber.py  m5stack_publisher.py  move_joints_action_client.py  reset_allout.py  reset_m5.py  servo_acc_set_client.py  servo_client.py  servo_enable_set_client.py  servo_set.py  servo_vel_set_client.py  set_allout.py  set_dout.py  set_pinout.py  set_pwmout.py
akari_launch/: package.xml  setup.cfg  setup.py
akari_launch/akari_launch/: akari_launch.py
akari_msgs/: CMakeLists.txt  package.xml
akari_msgs/action/: MoveJoint.action
akari_msgs/msg/: M5.msg  ServoState.msg
akari_msgs/srv/: SetAllout.srv  SetDisplayColor.srv  SetDisplayColorRgb.srv  SetDisplayImage.srv  SetJointFloat.srv  SetJointPos.srv  SetServoStatus.srv  Trigger.srv
akari_setting_publisher/: package.xml  setup.cfg  setup.py
akari_setting_publisher/akari_setting_publisher/: setting_publisher.py  settingpublisher.py
akari_state_publisher/: package.xml  setup.cfg  setup.py
akari_state_publisher/akari_state_publisher/: joint_state_publisher.py  jointstatepublisher.py
install/: local_setup.sh  setup.sh
install/akari_client_example/lib/akari_client_example/: display_color  display_image  display_reset  display_text  m5publisher  move_joints_action_client  (+8 more)
log/: latest_build
m5_server/: setup.cfg  setup.py
m5_server/m5_server/: m5_server.py
m5displayserver/: package.xml  setup.cfg  setup.py
py_akari_pubsub/: package.xml  setup.cfg  setup.py
py_akari_pubsub/py_akari_pubsub/: akari.py  publisher.py  subscriber.py
py_hello/: package.xml  setup.cfg  setup.py
py_hello/py_hello/: py_client.py  py_server.py
py_m5client/: package.xml  setup.cfg  setup.py
py_m5client/launch/: akariserver_launch.py
py_m5client/py_m5client/: py_m5client_move_joints_actionclient.py
py_m5serial/: CMakeLists.txt  package.xml  setup.cfg  setup.py
py_m5serial/akari_msgs/: CMakeLists.txt  package.xml
py_m5serial/akari_msgs/srv/: SetDisplayText.srv
py_m5serial/py_m5serial/: m5stack_publisher.py  py_m5client_display_color.py  py_m5client_display_image.py  py_m5client_display_reset.py  py_m5client_set_dout.py  py_m5server.py
py_m5serial/src/: button_gpio.py  m5stack_publisher.py  py_m5client.py  py_m5client_color.py  py_m5client_display_color.py  py_m5client_display_image.py  py_m5client_display_reset.py  py_m5client_display_text.py  py_m5client_move_joints_actionclient.py  py_m5client_reset.py  py_m5client_reset_allout.py  py_m5client_set_allout.py  py_m5client_set_dout.py  py_m5client_set_pwmout.py  py_m5client_text.py  py_m5server.py
py_m5serial/srv/: SetDisplayColor.srv
py_pubsub/: package.xml  setup.py
py_pubsub/py_pubsub/: publisher_member_function.py
py_srvcli/: package.xml  setup.py
py_tutorial_interfaces/: CMakeLists.txt  package.xml
servo_server/: package.xml  setup.cfg  setup.py
servo_server/servo_server/: servo_server.py  servo_set.py  servo_set_acc_server.py  servo_set_vel_server.py
servoserver/: setup.cfg  setup.py
servoserver/launch/: servoserver_launch.py
servoserver/servoserver/: py_servoserver.py
state_publisher/: package.xml  setup.cfg  setup.py
state_publisher/gazebo/: model.config
state_publisher/gazebo/gazebomodel/: akari.sdf  akari_body.urdf.xacro  akari_controll.yaml  akari_gazebo.gazebo.xacro  akari_gazebo.urdf  akari_gazebo.urdf.xacro  akari_head.urdf.xacro  akari_servo.urdf.xacro  akari_transmission.xacro
state_publisher/gazebo/world/: empty.world
state_publisher/launch/: gazebo.launch.py  gazebo_akari.launch.py  rviz_sim.launch.py  rvizdisplay.launch.py
state_publisher/rviz/: akari.rviz  akari_image.rviz
state_publisher/state_publisher/: joint_state_publisher.py  joint_state_publisher_gui_subscriber.py  m5stack_publisher.py  path_generator.py  sim_greeting.py  sim_m5_server.py  sim_servo_client.py  sim_servo_server.py  sim_servo_server_basic.py  spawn_akari.py
state_publisher/urdf/: akari.urdf  akari_servo.stl
(+308 files in other folders)
