<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>akari_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="akariros@todo.todo">akariros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>action_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>std_msgs</test_depend>

  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <test_depend>rclpy</test_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
